srcs/tester/base/vector/swap/log.txt
./base/vector/swap/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> foo (3,100); // three ints with a value of 100
 ^
./base/vector/swap/patched.cpp:8:2: error: use of undeclared identifier 'ft'
 ft::vector<int> bar (5,200); // five ints with a value of 200
 ^
./base/vector/swap/patched.cpp:10:2: error: use of undeclared identifier 'foo'
 foo.swap(bar);
 ^
./base/vector/swap/patched.cpp:10:11: error: use of undeclared identifier 'bar'
 foo.swap(bar);
          ^
./base/vector/swap/patched.cpp:13:23: error: use of undeclared identifier 'foo'
 for (unsigned i=0; i<foo.size(); i++)
                      ^
./base/vector/swap/patched.cpp:14:22: error: use of undeclared identifier 'foo'; did you mean 'for'?
 std::cout << ' ' << foo[i];
                     ^~~
                     for
./base/vector/swap/patched.cpp:14:22: error: expected expression
./base/vector/swap/patched.cpp:18:23: error: use of undeclared identifier 'bar'
 for (unsigned i=0; i<bar.size(); i++)
                      ^
./base/vector/swap/patched.cpp:19:22: error: use of undeclared identifier 'bar'
 std::cout << ' ' << bar[i];
                     ^
9 errors generated.
